tests/programs/taint/a4-test-cases/fail/taint_control_nested_fail.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let p = secure() in
  if p == 0 {
    if true {
      println("Yo")
    }
  }
}